--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ function myFunction() {
   }
 }
 function getNextPage() {
-  window.location.href = './selection.php';
+  window.location.href = './selection.html';
 }
 </script>
 
