--- a/selection.html
+++ b/selection.html
@@ -50,7 +50,7 @@ function unhover(element) {
 }
 
 function showmodel() {
-  window.location.href = './model.html';
+  window.location.href = './models.html';
 }
 
 </script>
