--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {
 </head>
 <body>
 <video autoplay muted loop id="myVideo">
-  <source src="./intro.mp4" type="video/mp4">
+  <source src="https://youtu.be/ysHAlWIleIM" type="video/mp4">
 </video>
 
 <div class="content">
