--- a/intro.html
+++ b/intro.html
@@ -47,9 +47,7 @@ body {
 </style>
 </head>
 
-<video autoplay muted loop id="myVideo">
-  <source src="./intro.mp4" type="video/mp4">
-</video>
+<iframe id="myVideo" src="https://www.youtube.com/watch?v=ysHAlWIleIM"></iframe>
 
 <div class="content">
   <h1>Heading</h1>
