--- a/index.html
+++ b/index.html
@@ -4,21 +4,58 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://threejs.org/build/three.js"></script>
 <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
-<script src="https://threejs.org/examples/js/loaders/PLYLoader.js"></script>
 <script src="https://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-<script src="https://threejs.org/examples/js/loaders/VTKLoader.js"></script>
-<script src='./PHP/readFolder.php'></script>
+<script src="./PHP/readFolder.php"></script>
 <script type="text/javascript">
 var mesh, renderer, scene, camera, controls;
+var baseImageOfSectionA = ["01-00-01.png","01-00-02.png","01-00-03.png","01-00-04.png","01-00-05.png",
+"01-00-07.png","01-00-08.png","01-00-09.png","01-45-01.png","01-45-02.png","01-45-03.png","01-45-04.png",
+"01-45-05.png","01-45-07.png","01-45-08.png","01-45-09.png","01-90-01.png","01-90-02.png","01-90-03.png",
+"01-90-04.png","01-90-05.png","01-90-07.png","01-90-08.png","01-90-09.png","02-00-10.png","02-00-11.png",
+"02-00-12.png","02-00-13.png","02-00-14.png","02-00-15.png","02-00-16.png","02-00-17.png","02-45-10.png",
+"02-45-11.png","02-45-12.png","02-45-13.png","02-45-14.png","02-45-15.png","02-45-16.png","02-45-17.png",
+"02-90-10.png","02-90-11.png","02-90-12.png","02-90-13.png","02-90-14.png","02-90-15.png","02-90-16.png",
+"02-90-17.png","05-00.png","05-45.png","05-90.png","06-00.png","06-45.png","06-90.png","07-00.png","07-45.png",
+"07-90.png","08-00.png","08-45.png","08-90.png","09-00.png","09-45.png","09-90.png"];
+
+var baseImageOfSectionB = ["0214-00-01.png","0214-00-01A.png","0214-00-01B.png","0214-00-02.png","0214-00-02A.png",
+"0214-00-02B.png","0214-00-03.png","0214-00-03A.png","0214-00-03B.png","0214-00-04.png","0214-00-04A.png","0214-00-04B.png",
+"0214-00-05.png","0214-00-06.png","0214-00-06A.png","0214-00-06B.png","0214-00-07.png","0214-00-08.png","0214-45-01A.png",
+"0214-45-01B.png","0214-45-02A.png","0214-45-02B.png","0214-45-03A.png","0214-45-03B.png","0214-45-04A.png","0214-45-04B.png",
+"0214-45-06A.png","0214-45-06B.png","0214-90-01A.png","0214-90-01B.png","0214-90-02A.png","0214-90-02B.png","0214-90-03A.png",
+"0214-90-03B.png","0214-90-04A.png","0214-90-04B.png","0214-90-06A.png","0214-90-06B.png","0215-00-07A.png","0215-00-07B.png",
+"0215-00-08A.png","0215-00-08B.png","0215-00-09.png","0215-00-09A.png","0215-00-09B.png","0215-00-10.png","0215-00-10A.png",
+"0215-00-10B.png","0215-00-11.png","0215-00-12.png","0215-00-13.png","0215-00-14.png","0215-00-15.png","0215-45-07A.png",
+"0215-45-07B.png","0215-45-08A.png","0215-45-08B.png","0215-45-09A.png","0215-45-09B.png","0215-45-10A.png","0215-45-10B.png",
+"0215-90-07A.png","0215-90-07B.png","0215-90-08A.png","0215-90-08B.png","0215-90-09A.png","0215-90-09B.png","0215-90-10A.png",
+"0215-90-10B.png","0216-00-11A.png","0216-00-12A.png","0216-00-12B.png","0216-00-15.png","0216-00-16.png","0216-00-17.png",
+"0216-00-18.png","0216-45-11A.png","0216-45-12A.png","0216-45-12B.png","0216-45-18.png","0216-90-11A.png","0216-90-12A.png",
+"0216-90-12B.png","0216-90-18.png"];
+
+var sectionBAudio = ["0214-00-001A.wav","0214-00-001B.wav","0214-00-002A.wav","0214-00-002B.wav","0214-00-003A.wav","0214-00-003B.wav",
+"0214-00-004A.wav","0214-00-004B.wav","0214-00-006A.wav","0214-00-006B.wav","0214-00-01.wav","0214-00-02.wav","0214-00-03.wav","0214-00-04.wav",
+"0214-00-05.wav","0214-00-06.wav","0214-00-07.wav","0214-00-08.wav","0214-45-001A.wav","0214-45-001B.wav","0214-45-002A.wav","0214-45-002B.wav",
+"0214-45-003A.wav","0214-45-003B.wav","0214-45-004A.wav","0214-45-004B.wav","0214-45-006A.wav","0214-45-006B.wav","0214-90-001A.wav","0214-90-001B.wav",
+"0214-90-002A.wav","0214-90-002B.wav","0214-90-003A.wav","0214-90-003B.wav","0214-90-004A.wav","0214-90-004B.wav","0214-90-006A.wav","0214-90-006B.wav",
+"0215-00-007A.wav","0215-00-007B.wav","0215-00-008A.wav","0215-00-008B.wav","0215-00-009A.wav","0215-00-009B.wav","0215-00-010A.wav","0215-00-010B.wav",
+"0215-00-09.wav","0215-00-10.wav","0215-00-11.wav","0215-00-12.wav","0215-00-13.wav","0215-00-14.wav","0215-00-15.wav","0215-45-007A.wav","0215-45-007B.wav",
+"0215-45-008A.wav","0215-45-008B.wav","0215-45-009A.wav","0215-45-009B.wav","0215-45-010A.wav","0215-45-010B.wav","0215-90-007A.wav","0215-90-007B.wav",
+"0215-90-008A.wav","0215-90-008B.wav","0215-90-009A.wav","0215-90-009B.wav","0215-90-010A.wav","0215-90-010B.wav","0216-00-011A.wav","0216-00-012A.wav",
+"0216-00-012B.wav","0216-00-15.wav","0216-00-16.wav","0216-00-17.wav","0216-00-18.wav","0216-45-011A.wav","0216-45-012A.wav","0216-45-012B.wav",
+"0216-45-18.wav","0216-90-011A.wav","0216-90-012A.wav","0216-90-012B.wav","0216-90-18.wav"];
+
 var objecMap = new Map();
 function showCenterObject(e) {
     e.stopPropagation();
     var id = e.target.id;
-    showObjects(id);
+    var section = e.target.name;
+    showObjects(id, section);
     animate();
 }
 
 function showHoverImage(e) {
+    var section = e.target.name;
+    if (section == 'B') return;
     var id = e.target.id;
     var imageElement = document.getElementById(id);
     imageElement.setAttribute("src", `./production/A/onmouse-image/${id}-Onmouse.png`);
@@ -26,8 +63,9 @@ function showHoverImage(e) {
 
 function showBaseImage(e) {
     var id = e.target.id;
+    var section = e.target.name;
     var imageElement = document.getElementById(id);
-    imageElement.setAttribute("src", `./production/A/base-image/${id}.png`);
+    imageElement.setAttribute("src", `./production/${section}/base-image/${id}.png`);
 }
 
 function objectSection(dom) {
@@ -37,9 +75,10 @@ function objectSection(dom) {
         e.stopPropagation();
     });
 }
-function showObjects(id) {
+function showObjects(id, section) {
   var objLoader = new THREE.OBJLoader();
-  objLoader.load(`./production/A/object/${id}.obj`,
+  var soundEffect = document.getElementById(id);
+  objLoader.load(`./production/${section}/object/${id}.obj`,
     (obj) => {
         // the request was successfull
         if (!objecMap.get(id)) {
@@ -52,11 +91,14 @@ function showObjects(id) {
             obj.children[0].geometry.center();
             scene.add(mesh);
             mesh.name = id;
-            objecMap.set(id, true)
+            objecMap.set(id, true);
+            soundEffect.play();
         } else {
             var selectedObject = scene.getObjectByName(id);
             scene.remove(selectedObject);
             objecMap.set(id, false);
+            soundEffect.pause();
+            soundEffect.currentTime = 0;
         }
     },
     (xhr) => {
@@ -71,17 +113,20 @@ function animate() {
     renderer.render(scene, camera);
 }
 
-window.onload = function() {
+function autoCreateDOMS(sectionData, section = 'A') {
     var div = document.getElementById("imagesSection");
-    for (var i = 0; i < files.length; i++) {
-          if (files[i].includes('png') == false) continue;
+    if (section == 'B') {
+        div = document.getElementById("mySidenavRight");
+    }
+    for (var i = 0; i < sectionData.length; i++) {
           var img = document.createElement("img");
-          var imageId = files[i].slice(0, -4);
+          var imageId = sectionData[i].slice(0, -4);
           objecMap.set(imageId, false);
-          img.setAttribute("src", `./production/A/base-image/${files[i]}`);
+          img.setAttribute("src", `./production/${section}/base-image/${sectionData[i]}`);
           img.setAttribute("id", imageId);
           img.setAttribute("width", '110px');
           img.setAttribute("height", '110px');
+          img.setAttribute("name", `${section}`);
           div.appendChild(img);
           var imageElement = document.getElementById(imageId);
           imageElement.addEventListener('click', showCenterObject);
@@ -90,12 +135,24 @@ window.onload = function() {
 
           var audio = document.createElement("audio");
           var audioId = imageId;
-          audio.setAttribute('autoplay', false);
-          audio.setAttribute('display', 'none');
-          audio.setAttribute("id", `audio-${audioId}`);
-          audio.setAttribute("src", `./production/A/audio/${audioId}.wav`);
+          if (section == 'A') {
+              audio.setAttribute('autoplay', false);
+              audio.setAttribute('display', 'none');
+              audio.setAttribute("id", `audio-${audioId}`);
+              audio.setAttribute("src", `./production/${section}/audio/${audioId}.wav`);
+          } else {
+              audio.setAttribute('autoplay', false);
+              audio.setAttribute('display', 'none');
+              audio.setAttribute("id", `audio-${audioId}`);
+              audio.setAttribute("src", `./production/${section}/audio/${sectionBAudio[i]}`);
+          }
           div.appendChild(audio);
     }
+}
+
+window.onload = function() {
+    autoCreateDOMS(baseImageOfSectionA);
+    autoCreateDOMS(baseImageOfSectionB, 'B');
     // Initialize canvas
     // renderer
     renderer = new THREE.WebGLRenderer();
@@ -112,7 +169,7 @@ window.onload = function() {
     // controls
     controls = new THREE.OrbitControls(camera, renderer.domElement);
     // to disable rotation
-    // controls.enableRotate = false;
+    controls.enableRotate = false;
     // to disable pan
     controls.enablePan = false;
     // light
