--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <script src="https://threejs.org/examples/js/loaders/OBJLoader.js"></script>
 <script src="./PHP/readFolder.php"></script>
 <script type="text/javascript">
-var mesh, renderer, scene, camera, controls;
+var mesh, renderer, scene, camera, controls, x, y;
+var numberOfAObj = 1, numberOfBObj = 2;
+var globalRotation = 0;
 var baseImageOfSectionA = ["01-00-01.png","01-00-02.png","01-00-03.png","01-00-04.png","01-00-05.png",
 "01-00-07.png","01-00-08.png","01-00-09.png","01-45-01.png","01-45-02.png","01-45-03.png","01-45-04.png",
 "01-45-05.png","01-45-07.png","01-45-08.png","01-45-09.png","01-90-01.png","01-90-02.png","01-90-03.png",
@@ -73,7 +75,12 @@ function showHoverImage(e) {
     if (section == 'B') return;
     var id = e.target.id;
     var imageElement = document.getElementById(id);
-    imageElement.setAttribute("src", `./production/A/onmouse-image/${id}-Onmouse.png`);
+    imageElement.style.opacity = 0;
+    setTimeout(function(){
+        imageElement.setAttribute("src", `./production/A/onmouse-image/${id}-Onmouse.png`);
+        imageElement.style.transitionDuration = '1s';
+        imageElement.style.opacity = 1;
+    }, 0.1);
 }
 
 function showBaseImage(e) {
@@ -81,6 +88,7 @@ function showBaseImage(e) {
     var section = e.target.name;
     var imageElement = document.getElementById(id);
     imageElement.setAttribute("src", `./production/${section}/base-image/${id}.png`);
+    imageElement.style = '';
 }
 
 function objectSection(dom) {
@@ -101,6 +109,8 @@ function clearAll() {
             soundEffect.currentTime = 0;
         }
     }
+    numberOfAObj = 1;
+    numberOfBObj = 2;
 }
 
 function showObjects(id, section) {
@@ -110,23 +120,38 @@ function showObjects(id, section) {
     (obj) => {
         // the request was successfull
         if (!objecMap.get(id)) {
+            if (section == 'A' && !numberOfAObj) return;
+            if (section == 'B' && !numberOfBObj) return;
             let material = new THREE.PointsMaterial({ color: 0xffffff, size: 0.05 })
             mesh = new THREE.Points(obj.children[0].geometry, material)
             mesh.scale.set( 0.055, 0.055, 0.055);
             mesh.rotation.x = -Math.PI / 2;
             mesh.rotation.y = Math.PI;
             mesh.rotation.z = Math.PI;
+
             obj.children[0].geometry.center();
             scene.add(mesh);
             mesh.name = id;
             objecMap.set(id, true);
             soundEffect.play();
+            if (section == 'A') {
+                numberOfAObj -= 1;
+            }
+            if (section == 'B') {
+                numberOfBObj -= 1;
+            }
         } else {
             var selectedObject = scene.getObjectByName(id);
             scene.remove(selectedObject);
             objecMap.set(id, false);
             soundEffect.pause();
             soundEffect.currentTime = 0;
+            if (section == 'A') {
+                numberOfAObj += 1;
+            }
+            if (section == 'B') {
+                numberOfBObj += 1;
+            }
         }
     },
     (xhr) => {
@@ -138,6 +163,7 @@ function showObjects(id, section) {
 }
 function animate() {
     requestAnimationFrame(animate);
+    globalRotation += 0.01;
     renderer.render(scene, camera);
 }
 
@@ -195,7 +221,7 @@ window.onload = function() {
     // controls
     controls = new THREE.OrbitControls(camera, renderer.domElement);
     // to disable rotation
-    controls.enableRotate = false;
+    // controls.enableRotate = false;
     // to disable pan
     controls.enablePan = false;
     // light
@@ -207,14 +233,13 @@ window.onload = function() {
 <script type="text/javascript">
 var show = false;
 function openNav() {
-    if (!show) {
+    if (show) {
         document.getElementById("mySidenav").style.width = "350px";
         document.getElementById("mySidenavRight").style.width = "350px";
     } else {
         document.getElementById("mySidenav").style.width = "0";
         document.getElementById("mySidenavRight").style.width = "0";
     }
-    show = !show;
 }
 function enter() {
     var introSoudEffect = document.getElementById('intro-audio');
@@ -225,23 +250,36 @@ function enter() {
     var modelContent = document.getElementById('content');
     modelContent.style.display = 'block';
 }
+function mousePosition(event) {
+    x = event.clientX;
+    if (x <= 350 || x >= window.innerWidth - 300) {
+        show = true;
+    } else {
+        show = false;
+    }
+    openNav();
+}
+function rightclick(e) {
+    e.preventDefault();
+    if (e.which == 3) {
+        clearAll();
+    }
+}
 </script>
 <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body onmousemove="mousePosition(event)">
 <div id="intro">
     <div class="title" onclick="enter()">
-        <h2 style="font-weight: lighter !important;">Sensory Overloads of Sounds</h2>
-        <p style="color: #B2B2B2;">Chihan Feng</p>
+        <h2 style="font-weight: lighter !important; cursor: pointer;">Sensory Overloads of Sounds</h2>
+        <p style="color: #B2B2B2; cursor: pointer;">Chihan Feng</p>
     </div>
     <div class="bottom-line">
         <p>If you don't hear anything, make sure your sound is on and the volume is turned up.<br/>And please use headphones for the best experience!</p>
     </div>
     <audio id="intro-audio" autoplay src="./production/intro.wav"></audio>
 </div>
-<div id="content">
-    <input type="submit" value="open" onclick="openNav()" class="open-nav"></input>
-    <input type="submit" value="Clear" onclick="clearAll()" class="clear-btn"></input>
+<div id="content" oncontextmenu="rightclick(event)">
     <div id="mySidenav" class="sidenav">
         <div id="imagesSection"></div>
     </div>
