--- a/index.html
+++ b/index.html
@@ -302,7 +302,10 @@ function rightclick(e) {
         <div class="bottom-line">
             <p>If you don't hear anything, make sure your sound is on and the volume is turned up.<br/>And please use headphones for the best experience!</p>
         </div>
-        <audio id="intro-audio" autoplay loop src="./production/intro.wav"></audio>
+        <audio style="display: none;" id="intro-audio" controls autoplay loop>
+            <source src="./production/intro.wav" type="audio/wav">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     <div id="content" oncontextmenu="rightclick(event)">
         <div id="mySidenav" class="sidenav">
