--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ function rightclick(e) {
         <div class="bottom-line">
             <p>If you don't hear anything, make sure your sound is on and the volume is turned up.<br/>And please use headphones for the best experience!</p>
         </div>
-        <audio style="display: none;" id="intro-audio" controls autoplay loop>
+        <audio style="width: 1px; height: 1px; opacity: 0;" id="intro-audio" controls autoplay loop>
             <source src="./production/intro.wav" type="audio/wav">
             Your browser does not support the audio element.
         </audio>
