change intro.wav url

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://threejs.org/build/three.js"></script>
 <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 <script src="https://threejs.org/examples/js/loaders/OBJLoader.js"></script>
-<script src="./PHP/readFolder.php"></script>
+
 <script type="text/javascript">
 var mesh, renderer, scene, camera, controls, x, y;
 var numberOfAObj = 1, numberOfBObj = 2;
@@ -309,7 +309,7 @@ function prevent(e) {
 </head>
 <body onmousemove="mousePosition(event)">
 <audio style="width: 1px; height: 1px; opacity: 0; position: absolute;" id="intro-audio" controls autoplay loop>
-    <source src="./production/intro.wav" type="audio/wav">
+    <source src="https://solony.github.io/production/intro.wav" type="audio/wav">
     Your browser does not support the audio element.
 </audio>
 <div id="container">
