--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <script>
 function enter() {
-    window.location = 'http://localhost/Project-3D/showcase.html';
+    window.location = 'https://solony.github.io/showcase.html';
 }
 </script>
 <body>
